Updated portfolio page with Who Wants to be a millionaire game and Star Wars RPG game

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,15 +79,20 @@
                 <div class="row mt-2">
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="./assets/images/nature-q-c-640-480-2.jpg" alt="image1">
-                            <p class="projectname">Photo Editor</p>
+                            <img class="img-fluid project-pic" src="./assets/images/star-wars-spaceships-x-wing.jpg" alt="image1">
+                            <a href="https://unnikrishnan-r.github.io/StarWarsRPG/#" target="_blank" >
+                            <p class="projectname">Star Wars RPG</p>
+                            </a>
+
                         </div>
                     </div>
 
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="./assets/images/technics-h-c-640-960-4.jpg" alt="image3">
-                            <p class="projectname">Circuit Designer</p>
+                            <img class="img-fluid project-pic" src="./assets/images/whowantstobeamillionaire.jpg" alt="image3">
+                            <a href="https://unnikrishnan-r.github.io/Who-Wants-to-be-a-Millionaire-Game/" target="_blank">
+                            <p class="projectname">Who Wants To Be a Millionaire</p>
+                            </a>
                         </div>
                     </div>
                 </div>
