Updated portfolio with NBA trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -106,8 +106,9 @@
 
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="./assets/images/technics-q-c-640-480-2.jpg" alt="image4">
-                            <p class="projectname">RPG Game</p>
+                            <img class="img-fluid project-pic" src="./assets/images/NBA-Trivia-questions-answers-quiz-game (1).jpeg" alt="image4">
+                            <a href="https://unnikrishnan-r.github.io/NBA-2019-Trivia/" target="_blank">
+                            <p class="projectname">NBA Trivia</p>
                         </div>
                     </div>
                 </div>
