Updated portfolio with Giphy API

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,8 +99,9 @@
                 <div class="row mt-2">
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="./assets/images/technics-q-c-640-480-6.jpg" alt="image5">
-                            <p class="projectname">DJ Mixer</p>
+                            <img class="img-fluid project-pic" src="https://fortunedotcom.files.wordpress.com/2016/02/giphy-3.gif" alt="image5">
+                            <a href="https://unnikrishnan-r.github.io/Giphy-API/" target="_blank">
+                            <p class="projectname">GIF Generator</p>
                         </div>
                     </div>
 
