Fixing some incorrect links

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,9 +79,10 @@
                 <div class="row mt-2">
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="./assets/images/star-wars-spaceships-x-wing.jpg" alt="image1">
-                            <a href="https://unnikrishnan-r.github.io/StarWarsRPG/#" target="_blank" >
-                            <p class="projectname">Star Wars RPG</p>
+                            <img class="img-fluid project-pic" src="./assets/images/star-wars-spaceships-x-wing.jpg"
+                                alt="image1">
+                            <a href="https://unnikrishnan-r.github.io/StarWarsRPG/#" target="_blank">
+                                <p class="projectname">Star Wars RPG</p>
                             </a>
 
                         </div>
@@ -89,9 +90,11 @@
 
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="./assets/images/whowantstobeamillionaire.jpg" alt="image3">
-                            <a href="https://unnikrishnan-r.github.io/Who-Wants-to-be-a-Millionaire-Game/" target="_blank">
-                            <p class="projectname">Who Wants To Be a Millionaire</p>
+                            <img class="img-fluid project-pic" src="./assets/images/whowantstobeamillionaire.jpg"
+                                alt="image3">
+                            <a href="https://unnikrishnan-r.github.io/Who-Wants-to-be-a-Millionaire-Game/"
+                                target="_blank">
+                                <p class="projectname">Who Wants To Be a Millionaire</p>
                             </a>
                         </div>
                     </div>
@@ -99,32 +102,41 @@
                 <div class="row mt-2">
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="https://fortunedotcom.files.wordpress.com/2016/02/giphy-3.gif" alt="image5">
+                            <img class="img-fluid project-pic" src="./assets/images/giphy-3.gif" alt="image5">
                             <a href="https://unnikrishnan-r.github.io/Giphy-API/" target="_blank">
-                            <p class="projectname">GIF Generator</p>
+                                <p class="projectname">GIF Generator</p>
+                            </a>
+
                         </div>
                     </div>
 
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="./assets/images/NBA-Trivia-questions-answers-quiz-game (1).jpeg" alt="image4">
+                            <img class="img-fluid project-pic"
+                                src="./assets/images/NBA-Trivia-questions-answers-quiz-game (1).jpeg" alt="image4">
                             <a href="https://unnikrishnan-r.github.io/NBA-2019-Trivia/" target="_blank">
-                            <p class="projectname">NBA Trivia</p>
+                                <p class="projectname">NBA Trivia</p>
+                            </a>
+
                         </div>
                     </div>
                 </div>
                 <div class="row mt-2">
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="./assets/images/sports-q-c-640-480-6.jpg" alt="image2">
+                            <img class="img-fluid project-pic" src="./assets/images/sports-q-c-640-480-6.jpg"
+                                alt="image2">
                             <p class="projectname">Fanatasy League</p>
+
                         </div>
                     </div>
 
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="./assets/images/technics-q-c-640-480-8.jpg" alt="image6">
+                            <img class="img-fluid project-pic" src="./assets/images/technics-q-c-640-480-8.jpg"
+                                alt="image6">
                             <p class="projectname">Boson Generator</p>
+
                         </div>
                     </div>
                 </div>
