Updated portfolio for RPS game

--- a/portfolio.html
+++ b/portfolio.html
@@ -124,9 +124,10 @@
                 <div class="row mt-2">
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="./assets/images/sports-q-c-640-480-6.jpg"
-                                alt="image2">
-                            <p class="projectname">Fanatasy League</p>
+                            <img class="img-fluid project-pic" src="./assets/images/RPS.png" alt="image2">
+                            <a href="https://unnikrishnan-r.github.io/RPS-Online-Game/game.html" target="_blank">
+                                <p class="projectname">Rock, Paper, Scissors</p>
+                            </a>
 
                         </div>
                     </div>
