Updated portfolio after project 1

--- a/portfolio.html
+++ b/portfolio.html
@@ -134,11 +134,12 @@
 
                     <div class="col-lg-4 mr-3">
                         <div class="project">
-                            <img class="img-fluid project-pic" src="./assets/images/technics-q-c-640-480-8.jpg"
+                            <img class="img-fluid project-pic" src="./assets/images/logo.png"
                                 alt="image6">
-                            <p class="projectname">Boson Generator</p>
-
-                        </div>
+                                <a href="https://unnikrishnan-r.github.io/Travel-Planner/" target="_blank">
+                                    <p class="projectname">Travel Planner</p>
+                                </a>
+                          </div>
                     </div>
                 </div>
             </div>
